# arogyadhama

./: .gitignore  README.md  arogyadhama.css  pyproject.toml  setup.py
arogyadhama/: hooks.py
arogyadhama/arogyadhama/: modules.txt
arogyadhama/arogyadhama/doctype/yoga_practice_item/: yoga_practice_item.py
arogyadhama/arogyadhama/setup/: install.py
arogyadhama/public/css/: arogyadhama.css
arogyadhama_health/: README.md  setup.py
arogyadhama_health/arogyadhama_health/: hooks.py
arogyadhama_health/arogyadhama_health/arogyadhama_health/doctype/diet_chart/: diet_chart.json
arogyadhama_health/arogyadhama_health/arogyadhama_health/doctype/treatment_schedule/: treatment_schedule.py
arogyadhama_health/arogyadhama_health/arogyadhama_health/doctype/yoga_prescription/: yoga_prescription.json  yoga_prescription.py
arogyadhama_health/arogyadhama_health/arogyadhama_health/events/: encounter.py  patient.py
arogyadhama_health/arogyadhama_health/doctype/diet_chart/: diet_chart.py
arogyadhama_health/arogyadhama_health/doctype/treatment_schedule/: treatment_schedule.json
arogyadhama_health/arogyadhama_health/doctype/yoga_practice_item/: yoga_practice_item.json
arogyadhama_health/arogyadhama_health/setup/: install.py
