[project]
name = "arogyadhama_health"
version = "0.1.0"
description = "Custom Frappe app for Arogyadhama Hospital Information Management System"
authors = [
    {name = "Abinash", email = "admin@arogyadhama.com"}
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core:buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
erpnext = ">=15.0.0,<17.0.0"
